# excog_trajectory

./: .gitignore  README.md  demo_imputation.py  main.py  pyproject.toml  pytest.ini  test_download.py
.junie/: guidelines.md
src/excog_trajectory/: __init__.py  analysis.py  cli.py  data.py  visualization.py
tests/: conftest.py
tests/integration/: test_download_extract.py  test_load_nhanes.py
tests/unit/: test_analysis.py  test_cli.py  test_data.py  test_visualization.py  test_wgcna.py
