[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excog-trajectory"
version = "0.1.0"
description = "Analysis of exposomic trajectories of cognitive decline in NHANES"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.3.0",
    "pandas==2.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn==1.7.0",
    "statsmodels>=0.13.0",
    "fonttools==4.58.4",
    "pandas-stubs==2.2.3.250527",
    "miceforest>=5.6.0",
    "dill>=0.4.0",
    "plotnine>=0.14.5",
]

[project.scripts]
excog = "excog_trajectory.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "ruff>=0.0.100",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
